--- a/www.nass.gov.ng/3eff0ac7343306f765e31b983761e74f213745fe.yml
+++ b/www.nass.gov.ng/3eff0ac7343306f765e31b983761e74f213745fe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:39:59 GMT
+    - Wed, 22 Aug 2018 00:38:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DyM88bzD4-DBgvAJ9j4qc1; path=/
+    - PHPSESSID=iMGjtPL%2C5V-6kh472quUM1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:40:00 GMT
+recorded_at: Wed, 22 Aug 2018 00:38:53 GMT
