--- a/www.nass.gov.ng/51b904263217ceb0be280a410e1c4da3e290fc31.yml
+++ b/www.nass.gov.ng/51b904263217ceb0be280a410e1c4da3e290fc31.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:43:22 GMT
+    - Wed, 22 Aug 2018 00:42:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JDmLqVH6DMGX%2CX3JJXZIX3; path=/
+    - PHPSESSID=lnbF825P1%2Cy2oW2XyWQqQ3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:43:23 GMT
+recorded_at: Wed, 22 Aug 2018 00:42:00 GMT
