--- a/www.nass.gov.ng/cdc561a827b6a1a9128dce925b3eb2175ab3bb76.yml
+++ b/www.nass.gov.ng/cdc561a827b6a1a9128dce925b3eb2175ab3bb76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:45:32 GMT
+    - Wed, 22 Aug 2018 00:43:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Vfg8ofOAXlMXO-eLGXR4E3; path=/
+    - PHPSESSID=6TDXJkhigsHDYiGIuS%2Ckg2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:45:32 GMT
+recorded_at: Wed, 22 Aug 2018 00:43:54 GMT
