--- a/www.nass.gov.ng/66bb873ab3260ca61653cf69f9fd6abbb1a0e4da.yml
+++ b/www.nass.gov.ng/66bb873ab3260ca61653cf69f9fd6abbb1a0e4da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:49:25 GMT
+    - Wed, 22 Aug 2018 00:47:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sos5qjyY%2C-JqE74tMiVpv1; path=/
+    - PHPSESSID=Ub1D4vhMhonPZ388yZcxK0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:49:25 GMT
+recorded_at: Wed, 22 Aug 2018 00:47:59 GMT
