--- a/www.nass.gov.ng/0a3188b0496d108ddcf3a2a9523440afc53f7a27.yml
+++ b/www.nass.gov.ng/0a3188b0496d108ddcf3a2a9523440afc53f7a27.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:52:50 GMT
+    - Wed, 22 Aug 2018 00:52:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wfUbrqbT-8CMJwAtoM3TL1; path=/
+    - PHPSESSID=17Rf2keYdXPwyxOg%2CaxVk2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:52:51 GMT
+recorded_at: Wed, 22 Aug 2018 00:52:28 GMT
