--- a/www.nass.gov.ng/bd4c84870eb37389b14fbb7f4099407a59255042.yml
+++ b/www.nass.gov.ng/bd4c84870eb37389b14fbb7f4099407a59255042.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 06:01:35 GMT
+    - Wed, 22 Aug 2018 01:01:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KVC%2CRFy7twWeWj6mppQ9z2; path=/
+    - PHPSESSID=2EoJVjCI-bsGSuXpZtKzA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 06:01:35 GMT
+recorded_at: Wed, 22 Aug 2018 01:01:21 GMT
