--- a/www.nass.gov.ng/58d4efb1a91f09b48deeb5c8d82eff7a522b1bc2.yml
+++ b/www.nass.gov.ng/58d4efb1a91f09b48deeb5c8d82eff7a522b1bc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 06:05:45 GMT
+    - Wed, 22 Aug 2018 01:05:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UeMeGlDlvL4TD9q8ARshi0; path=/
+    - PHPSESSID=HMV%2C5P73KExbcl8VA1YcC1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 06:05:45 GMT
+recorded_at: Wed, 22 Aug 2018 01:05:30 GMT
