--- a/www.nass.gov.ng/0dc3fab010f01bda86e21cd2d25dcb2f5e1f9534.yml
+++ b/www.nass.gov.ng/0dc3fab010f01bda86e21cd2d25dcb2f5e1f9534.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 06:15:21 GMT
+    - Wed, 22 Aug 2018 01:15:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WY2yAAeH9MqE7am-p44BK2; path=/
+    - PHPSESSID=JGHME54RN-AHq%2C7PSvJPR2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 06:15:22 GMT
+recorded_at: Wed, 22 Aug 2018 01:15:47 GMT
