--- a/www.nass.gov.ng/6a468782aa6afb271767130966bd956cee44cc40.yml
+++ b/www.nass.gov.ng/6a468782aa6afb271767130966bd956cee44cc40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 16:59:47 GMT
+    - Thu, 23 Aug 2018 16:14:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=57PkxFVkVXniFQOZLk%2CGJ3; path=/
+    - PHPSESSID=M%2CT%2CD2DXqt%2CHCUr3PzVCi3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 21 Aug 2018 16:59:47 GMT
+recorded_at: Thu, 23 Aug 2018 16:14:17 GMT
