--- a/www.nass.gov.ng/8d780c7afbf674e2abb845b7c0c8c617835b2e6d.yml
+++ b/www.nass.gov.ng/8d780c7afbf674e2abb845b7c0c8c617835b2e6d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:04:10 GMT
+    - Thu, 23 Aug 2018 16:17:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-jocvKlTKYzpFDFFbE0D31; path=/
+    - PHPSESSID=NDZSHxJSCo%2CZJ5A7Pl5hn1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:04:10 GMT
+recorded_at: Thu, 23 Aug 2018 16:17:34 GMT
