--- a/www.nass.gov.ng/0910d604db86e85613518695dd6e712e26baeb66.yml
+++ b/www.nass.gov.ng/0910d604db86e85613518695dd6e712e26baeb66.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:10:01 GMT
+    - Thu, 23 Aug 2018 16:24:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IXJCvGbbF%2CEJFOpjZWCSP0; path=/
+    - PHPSESSID=bSufKaRym-JDa-CpT7h-E1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:10:02 GMT
+recorded_at: Thu, 23 Aug 2018 16:24:48 GMT
