--- a/www.nass.gov.ng/fd960d320e6e3fa2eb93012cd35cf5ba7f6b1a36.yml
+++ b/www.nass.gov.ng/fd960d320e6e3fa2eb93012cd35cf5ba7f6b1a36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:11:41 GMT
+    - Thu, 23 Aug 2018 16:26:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=38WAnsrqrrSeUxGzNVA7a3; path=/
+    - PHPSESSID=T6MwbbJ08yixTwHoZL%2Cpq1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:11:42 GMT
+recorded_at: Thu, 23 Aug 2018 16:26:31 GMT
