--- a/www.nass.gov.ng/279be48295a08c076110810ef4a02785acd1ac89.yml
+++ b/www.nass.gov.ng/279be48295a08c076110810ef4a02785acd1ac89.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:17:15 GMT
+    - Thu, 23 Aug 2018 16:32:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gL7%2C5Yo0NkPCToXfqjUsT1; path=/
+    - PHPSESSID=IcaD%2CUWyZ-Vh0I7-pe4%2CC2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:17:15 GMT
+recorded_at: Thu, 23 Aug 2018 16:32:19 GMT
