--- a/www.nass.gov.ng/2f6590bb83aea2411984110e680210cfc9c3a2c2.yml
+++ b/www.nass.gov.ng/2f6590bb83aea2411984110e680210cfc9c3a2c2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:18:03 GMT
+    - Thu, 23 Aug 2018 16:33:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CJXkcTrlbLk-S3%2CMueZr22; path=/
+    - PHPSESSID=7IU74yidioo8f2X5RyEh30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:18:03 GMT
+recorded_at: Thu, 23 Aug 2018 16:33:48 GMT
