--- a/www.nass.gov.ng/b8d76965457d98fdca4e29dd2cc2214d8c2a5726.yml
+++ b/www.nass.gov.ng/b8d76965457d98fdca4e29dd2cc2214d8c2a5726.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:22:55 GMT
+    - Thu, 23 Aug 2018 16:38:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KrSg8z%2C8UpDtOJm3QlSNU0; path=/
+    - PHPSESSID=eH%2CirwRASW%2C7O6BcybPfr1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:22:55 GMT
+recorded_at: Thu, 23 Aug 2018 16:38:10 GMT
