--- a/www.nass.gov.ng/c02324c012680cdbf0bf9f555204bc8476b225c0.yml
+++ b/www.nass.gov.ng/c02324c012680cdbf0bf9f555204bc8476b225c0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:26:18 GMT
+    - Thu, 23 Aug 2018 16:43:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gqgwiSUeF%2CK8abFqE23vl3; path=/
+    - PHPSESSID=YHOQqRyINJK8NvW-8zY1f0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:26:18 GMT
+recorded_at: Thu, 23 Aug 2018 16:43:36 GMT
