--- a/www.nass.gov.ng/31b21418f37b11687cb538c410ae9369249d9bef.yml
+++ b/www.nass.gov.ng/31b21418f37b11687cb538c410ae9369249d9bef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:28:08 GMT
+    - Thu, 23 Aug 2018 16:45:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZyW0uQ1y%2C43azpIofkr%2CY1; path=/
+    - PHPSESSID=LU1NEM%2CrKW9UwLKI-S8Ic1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:28:08 GMT
+recorded_at: Thu, 23 Aug 2018 16:45:42 GMT
