--- a/www.nass.gov.ng/d02341d24e52c6f7cb090b054d3991e7a2b6390d.yml
+++ b/www.nass.gov.ng/d02341d24e52c6f7cb090b054d3991e7a2b6390d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:43:09 GMT
+    - Thu, 23 Aug 2018 17:01:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7wLMt6o24HQme4tOKMHS%2C2; path=/
+    - PHPSESSID=XIax0dAjuDFXYOk65gcvy2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:43:09 GMT
+recorded_at: Thu, 23 Aug 2018 17:01:16 GMT
