--- a/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
+++ b/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:45:56 GMT
+    - Thu, 23 Aug 2018 17:03:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rivqttop1JiKKjQYcA2Dc3; path=/
+    - PHPSESSID=59CsTTptwH9irmKj%2C6TyH3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:45:56 GMT
+recorded_at: Thu, 23 Aug 2018 17:03:27 GMT
