--- a/www.nass.gov.ng/29eaadec979d856f74a0a20b4b00335db217ea95.yml
+++ b/www.nass.gov.ng/29eaadec979d856f74a0a20b4b00335db217ea95.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:46:42 GMT
+    - Thu, 23 Aug 2018 17:04:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Iix876n32pmAbFqRP0Xn71; path=/
+    - PHPSESSID=B5sESwF9PsBbM72%2C3SppZ3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:46:42 GMT
+recorded_at: Thu, 23 Aug 2018 17:04:42 GMT
