--- a/www.nass.gov.ng/6010d0da229047fb348b263ae175ea97eb576a1b.yml
+++ b/www.nass.gov.ng/6010d0da229047fb348b263ae175ea97eb576a1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:52:08 GMT
+    - Thu, 23 Aug 2018 17:09:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qrA2voixS-9RoUV8q5Mf42; path=/
+    - PHPSESSID=LrKlJFLIYxs%2CWsQ5XdEWI3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:52:08 GMT
+recorded_at: Thu, 23 Aug 2018 17:09:31 GMT
