--- a/www.nass.gov.ng/dbc6403d0cf90658e0e4aa11c6810bb4c7054cc6.yml
+++ b/www.nass.gov.ng/dbc6403d0cf90658e0e4aa11c6810bb4c7054cc6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 17:52:55 GMT
+    - Thu, 23 Aug 2018 17:10:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eH%2C09q5seD6BXV6cooGre0; path=/
+    - PHPSESSID=vfURsFSvu7g7L4dxlDtEn3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 17:52:55 GMT
+recorded_at: Thu, 23 Aug 2018 17:10:19 GMT
