--- a/www.nass.gov.ng/a1b6a895194ee1db2324d6cd7be0e38230956b82.yml
+++ b/www.nass.gov.ng/a1b6a895194ee1db2324d6cd7be0e38230956b82.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:03:06 GMT
+    - Thu, 23 Aug 2018 17:20:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EJihvt%2CCqvfEalg8nTaVB1; path=/
+    - PHPSESSID=xYNnJVOb3lI6S89j9EeSF0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:03:06 GMT
+recorded_at: Thu, 23 Aug 2018 17:20:59 GMT
