--- a/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
+++ b/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:04:32 GMT
+    - Thu, 23 Aug 2018 17:21:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Nj5F9-Tsu3ulUq%2CTKEX%2C01; path=/
+    - PHPSESSID=x3s7HGBkancy-iYWHxVbY2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:04:32 GMT
+recorded_at: Thu, 23 Aug 2018 17:21:46 GMT
