--- a/www.nass.gov.ng/55ab728c108631d7efb8ff27725a28ce1da02f0e.yml
+++ b/www.nass.gov.ng/55ab728c108631d7efb8ff27725a28ce1da02f0e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:07:29 GMT
+    - Thu, 23 Aug 2018 17:24:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=k%2CjdxVWu-K7AEN8VtWc7A0; path=/
+    - PHPSESSID=aAXAvrd6CEEZuwydw4-Kf1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:07:30 GMT
+recorded_at: Thu, 23 Aug 2018 17:24:38 GMT
