--- a/www.nass.gov.ng/3ceb47421c438620b30672b5fe37b22d6a3c030b.yml
+++ b/www.nass.gov.ng/3ceb47421c438620b30672b5fe37b22d6a3c030b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:15:39 GMT
+    - Thu, 23 Aug 2018 17:33:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PQkG7P0w%2Cv6i1ZTdl--zq2; path=/
+    - PHPSESSID=YMwY00y%2CRHOFx1jsUhgP73; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:15:39 GMT
+recorded_at: Thu, 23 Aug 2018 17:33:14 GMT
