--- a/www.nass.gov.ng/021333d297c54eb2e1fa20ac6aeb7d94134317f5.yml
+++ b/www.nass.gov.ng/021333d297c54eb2e1fa20ac6aeb7d94134317f5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:16:28 GMT
+    - Thu, 23 Aug 2018 17:34:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kRBe-vjoIv8P02Lof44M71; path=/
+    - PHPSESSID=tw4GFpqKHWv-j%2C23wdnql2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:16:28 GMT
+recorded_at: Thu, 23 Aug 2018 17:34:02 GMT
