--- a/www.nass.gov.ng/f5d28a912f857545a05e601947f8f53cfb4a1245.yml
+++ b/www.nass.gov.ng/f5d28a912f857545a05e601947f8f53cfb4a1245.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:17:18 GMT
+    - Thu, 23 Aug 2018 17:34:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8%2CAb2HIXNkVrsg3amy5rd1; path=/
+    - PHPSESSID=L0fC1z3t1bFkzWM3OPmf50; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:17:18 GMT
+recorded_at: Thu, 23 Aug 2018 17:34:54 GMT
