--- a/www.nass.gov.ng/e0bc5ba842815022b2066ae42984042b871b93a2.yml
+++ b/www.nass.gov.ng/e0bc5ba842815022b2066ae42984042b871b93a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:28:18 GMT
+    - Thu, 23 Aug 2018 17:45:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1TyeVuGiep24y9g4S1w%2C00; path=/
+    - PHPSESSID=2RdnT6NqC7PK1qgQbVusg0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:28:19 GMT
+recorded_at: Thu, 23 Aug 2018 17:45:40 GMT
