--- a/www.nass.gov.ng/ae0bdba69628a387747f5c1ab6015b1b48cab21d.yml
+++ b/www.nass.gov.ng/ae0bdba69628a387747f5c1ab6015b1b48cab21d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:29:24 GMT
+    - Thu, 23 Aug 2018 17:46:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ujamRnIDXXyI3VZPJT5M51; path=/
+    - PHPSESSID=-WPPjYKRQ5MPp%2CH8yoKy92; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:29:24 GMT
+recorded_at: Thu, 23 Aug 2018 17:46:30 GMT
