--- a/www.nass.gov.ng/0e5f1bc35fcd9103e796771823627b65a0f1b0c7.yml
+++ b/www.nass.gov.ng/0e5f1bc35fcd9103e796771823627b65a0f1b0c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:30:59 GMT
+    - Thu, 23 Aug 2018 17:48:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yI5gr9lgdvgXXE9nw%2CKZB1; path=/
+    - PHPSESSID=X0h3xBIouHdApftJxnYn81; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:31:00 GMT
+recorded_at: Thu, 23 Aug 2018 17:48:28 GMT
