--- a/www.nass.gov.ng/c0ef1a650be43e835a9c420501b3707be4768b68.yml
+++ b/www.nass.gov.ng/c0ef1a650be43e835a9c420501b3707be4768b68.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:38:31 GMT
+    - Thu, 23 Aug 2018 17:54:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jQ%2C9MnxNQTK4bimBy38uC2; path=/
+    - PHPSESSID=0FOj2GzJ5DUnUuFL-nJxi1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:38:31 GMT
+recorded_at: Thu, 23 Aug 2018 17:54:49 GMT
