--- a/www.nass.gov.ng/98d8562eac6fe344710859413d6c84743377df93.yml
+++ b/www.nass.gov.ng/98d8562eac6fe344710859413d6c84743377df93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:40:51 GMT
+    - Thu, 23 Aug 2018 17:56:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=X53jSiTs2SgTVS8sRI9A83; path=/
+    - PHPSESSID=-ypfZvrLWxc%2C4TcaiwOm30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:40:51 GMT
+recorded_at: Thu, 23 Aug 2018 17:56:28 GMT
