--- a/www.nass.gov.ng/fc01a801df066999ed3cae6abfffb3e4561c9244.yml
+++ b/www.nass.gov.ng/fc01a801df066999ed3cae6abfffb3e4561c9244.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:47:33 GMT
+    - Thu, 23 Aug 2018 18:04:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EoDk-6ZuA0cvgp%2Cg6-Qez0; path=/
+    - PHPSESSID=dkRbNpn%2C3T%2CqyzUWLbYDJ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:47:33 GMT
+recorded_at: Thu, 23 Aug 2018 18:04:11 GMT
