--- a/www.nass.gov.ng/c4d376a5b2e869eb531cee9ca607878e73f126ec.yml
+++ b/www.nass.gov.ng/c4d376a5b2e869eb531cee9ca607878e73f126ec.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:50:44 GMT
+    - Thu, 23 Aug 2018 18:07:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W6DCWPLiJc0Ii%2CXyu2-F93; path=/
+    - PHPSESSID=oWk5ceDlUtohD%2CtB9gfTO2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:50:44 GMT
+recorded_at: Thu, 23 Aug 2018 18:07:55 GMT
