--- a/www.nass.gov.ng/538c6e6f17fc4b8af182bbbb1b41bb7a7a52b456.yml
+++ b/www.nass.gov.ng/538c6e6f17fc4b8af182bbbb1b41bb7a7a52b456.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 18:51:31 GMT
+    - Thu, 23 Aug 2018 18:08:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=z8aWdAhtVraLfBiA6YZfJ2; path=/
+    - PHPSESSID=2VXxW5ZL007I%2C29nbXp4W2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 18:51:31 GMT
+recorded_at: Thu, 23 Aug 2018 18:08:58 GMT
