--- a/www.nass.gov.ng/6f48e23d2d7a89ec4f22f1e3531817119d8fe954.yml
+++ b/www.nass.gov.ng/6f48e23d2d7a89ec4f22f1e3531817119d8fe954.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 19:02:12 GMT
+    - Thu, 23 Aug 2018 18:19:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=t7dmQPecc9RfdVtNgitby3; path=/
+    - PHPSESSID=f4UC7jQkUg37ERD0OW%2CcE0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 19:02:12 GMT
+recorded_at: Thu, 23 Aug 2018 18:19:46 GMT
