--- a/www.nass.gov.ng/814144774172e86d057491ffd55cba0287c4307a.yml
+++ b/www.nass.gov.ng/814144774172e86d057491ffd55cba0287c4307a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 19:03:08 GMT
+    - Thu, 23 Aug 2018 18:20:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2YPGlyM0A9E4QSMXX7Z9-1; path=/
+    - PHPSESSID=kudUfW6z1LHU%2CmVkV5dSD3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 19:03:08 GMT
+recorded_at: Thu, 23 Aug 2018 18:20:38 GMT
